# azure-django-app-metrics

./: Dockerfile  README.md  compose.yaml  cspell.json  docker-entrypoint.sh  manage.py  pyproject.toml
azure/bicep/: appi.bicep
azure/terraform/: main.tf  output.tf  variables.tf
azure/terraform/config/: template.tfvars
azure/terraform/modules/entra/: main.tf
azure/terraform/modules/monitor/: main.tf  output.tf  variables.tf
myapp/: models.py  serializers.py  views.py
myapp/migrations/: 0001_initial.py
project/: settings.py  urls.py  wsgi.py
samples/: sample.env
