[tool.poetry]
name = "azure-django-metrics"
version = "0.1.0"
description = ""
authors = ["Evandro Pomatti <evandro.pomatti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
django-environ = "^0.9.0"
opencensus-ext-azure = "^1.1.4"
opencensus-ext-django = "^0.7.6"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
