[tool.poetry]
name = "azure-django-metrics"
version = "0.1.0"
description = ""
authors = ["Evandro Pomatti <evandro.pomatti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.1"
django-environ = "^0.11.2"
azure-monitor-opentelemetry = "1.4.1"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-django = "^0.45b0"

[tool.poetry.dev-dependencies]
pylint = "^3.1.0"
pylint-django = "^2.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
